@@ -32,6 +32,9 @@ GNU coreutils NEWS                                    -*- outline -*-
   rm indicates the correct number of arguments in its confirmation prompt,
   on all platforms.  [bug introduced in coreutils-8.22]
 
+  shuf -i with a single redundant operand, would crash instead of issuing
+  a diagnostic.  [bug introduced in coreutils-8.22]
+
 ** New features
 
   chroot accepts the new --skip-chdir option to not change the working directory
